--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "api-server": "json-server db.json --watch --port=3300 -m ./node_modules/json-server-auth"
+    "api-server": "json-server db.json --watch --port=3300 -m ./node_modules/json-server-auth --delay=500"
   },
   "eslintConfig": {
     "extends": [
