--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "cypress": "^12.0.1",
     "graphql": "^16.6.0",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
@@ -25,9 +26,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
-    "api-server": "json-server db.json --watch --port=3300 -m ./node_modules/json-server-auth --delay=500"
+    "api-server": "json-server db.json --watch --port=3300 -m ./node_modules/json-server-auth --delay=500",
+    "cypress" : "cypress open"
   },
   "eslintConfig": {
     "extends": [
