--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "cypress": "^12.0.1",
+    "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
@@ -21,7 +22,8 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,7 +31,7 @@
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "api-server": "json-server db.json --watch --port=3300 -m ./node_modules/json-server-auth --delay=500",
-    "cypress" : "cypress open"
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
