--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "axios-mock-adapter": "^1.21.2",
     "bootstrap": "^5.2.3",
     "cypress": "^12.0.1",
     "graphql": "^16.6.0",
@@ -29,7 +30,7 @@
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "api-server": "json-server db.json --watch --port=3300 -m ./node_modules/json-server-auth --delay=500",
-    "cypress" : "cypress open"
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
